--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <h3 class="my-4"><b><font color="yellow">INÉDITO:</font></b> NOVO MÉTODO SECRETO PARA <font color="green">PERDER PESO</font> E <font color="green">EMAGRECER</font> DE FORMA SIMPLES EM UMA SEMANA</h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_625edc7593213c00098019d9">var s=document.createElement("script");s.src="https://cdn.converteai.net/4fa2d8ef-4512-4ac7-ae90-cfdf8eabdc08/players/625edc7593213c00098019d9/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/BL2ya26" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -443,7 +443,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/BL2ya26" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
